Improved recommendation algorithms Decreased number of queries performed